input from others
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@5947 4525493e-7705-40b1-a816-d608a930855b

--- a/2012/3papers/combined/combined.tex
+++ b/2012/3papers/combined/combined.tex
@@ -4,18 +4,132 @@
 \title{Luminosity independent measurements of total, elastic and inelastic cross-sections at $\sqrt s = 7\,\rm TeV$}
 %\shorttitle{Title} %Insert here a short version of the title if it exceeds 70 characters
 
-\author{F. Author\inst{1,2} \and S. Author\inst{1} \and T. Author\inst{2}}
-\shortauthor{F. Author \etal}
-
-\institute{                    
-  \inst{1} First Institute - Address\\
-  \inst{2} Second Institute - Address
+\author{
+The TOTEM Collaboration -- !! PRELIMINARY !!\\
+G.~Antchev\thanks{INRNE-BAS, Institute for Nuclear Research and Nuclear Energy, Bulgarian Academy of Sciences, Sofia, Bulgaria.}\addtocounter{footnote}{-1}
+%\addtocounter{footnote}
+\and P.~Aspell\inst{8}
+\and I.~Atanassov\inst{8}\hspace{-0.15cm}\footnotemark
+\and V.~Avati\inst{8}
+\and J.~Baechler\inst{8}
+\and V.~Berardi\inst{5b,5a}
+\and M.~Berretti\inst{7b}
+\and E.~Bossini\inst{7b}
+\and M.~Bozzo\inst{6b,6a}
+\and P.~Brogi\inst{7b}
+\and E.~Br\"{u}cken\inst{3a,3b}
+\and A.~Buzzo\inst{6a}
+\and F.~S.~Cafagna\inst{5a}
+\and M.~Calicchio\inst{5b,5a}
+\and M.~G.~Catanesi\inst{5a}
+\and C.~Covault\inst{9}
+\and M.~Csan\'{a}d\inst{4}
+\and T.~Cs\"{o}rg\H{o}\inst{4}
+\and M.~Deile\inst{8}
+ \and K.~Eggert\inst{9}
+ \and V.~Eremin\thanks{Ioffe Physical - Technical Institute of Russian Academy of Sciences.}
+ \and R.~Ferretti\inst{6a,6b}
+ \and F.~Ferro\inst{6a}
+ \and A. Fiergolski\thanks{Warsaw University of Technology, Poland.}
+ \and F.~Garcia\inst{3a}
+ \and S.~Giani\inst{8}
+ \and V.~Greco\inst{7b,8}
+ \and L.~Grzanka\inst{8}\hspace{-0.15cm}\thanks{Institute of Nuclear Physics, Polish Academy of Science, Cracow, Poland.}\addtocounter{footnote}{-2}
+ \and J.~Heino\inst{3a}
+ \and T.~Hilden\inst{3a,3b}
+ \and M.~R.~Intonti\inst{5a}
+%\and M.~Janda\inst{1b}
+ \and J.~Ka\v{s}par\inst{1a,8}
+ \and J.~Kopal\inst{1a,8}
+ \and V.~Kundr\'{a}t\inst{1a}
+ \and K.~Kurvinen\inst{3a}
+ \and S.~Lami\inst{7a}
+ \and G.~Latino\inst{7b}
+ \and R.~Lauhakangas\inst{3a}
+ \and  T.~Leszko\footnotemark
+ %\thanks{Warsaw University of Technology, Poland}
+ \and E.~Lippmaa\inst{2}
+ \and M.~Lokaj\'{\i}\v{c}ek\inst{1a}
+ \and M.~Lo~Vetere\inst{6b,6a}
+ \and F.~Lucas~Rodr\'{i}guez\inst{8}
+ \and M.~Macr\'{\i}\inst{6a}
+ \and L.~Magaletti\inst{5b,5a}
+%\and G.~Magazz\`{u}\inst{7a}
+ \and T.~M\"aki\inst{3a}
+ \and A.~Mercadante\inst{5b,5a}
+%\and M.~Meucci\inst7b
+ \and N.~Minafra\inst{8} 
+ \and S.~Minutoli\inst{6a}\addtocounter{footnote}{1}
+ \and F.~Nemes\inst{4}\hspace{-0.15cm}\thanks{Department of Atomic Physics, ELTE University, Hungary.}
+ \and H.~Niewiadomski\inst{8}
+%\and E.~Noschis\inst{8}
+%\and T.~Nov\'{a}k\inst{4}\thanks{KRF,  Gy\"{o}ngy\"{o}s, Hungary}
+ \and E.~Oliveri\inst{7b}
+ \and F.~Oljemark\inst{3a,3b}
+ \and R.~Orava\inst{3a,3b}
+ \and M.~Oriunno\inst{8}\hspace{-0.15cm}\thanks{SLAC National Accelerator Laboratory, Stanford CA, USA.}
+ \and K.~\"{O}sterberg\inst{3a,3b}
+ \and P.~Palazzi\inst{7b}
+ \and J.~Proch\'{a}zka\inst{1a}
+ \and M.~Quinto\inst{5a}
+ \and E.~Radermacher\inst{8}
+ \and E.~Radicioni\inst{5a}
+ \and F.~Ravotti\inst{8}
+ \and E.~Robutti\inst{6a}
+ \and L.~Ropelewski\inst{8}
+ \and G.~Ruggiero\inst{8}
+ \and H.~Saarikko\inst{3a,3b}
+% \and G.~Sanguinetti\inst{7a}
+ \and A.~Santroni\inst{6b,6a}
+ \and A.~Scribano\inst{7b}
+ \and W.~Snoeys\inst{8}
+ \and J.~Sziklai\inst{4}
+ \and C.~Taylor\inst{9}
+ \and N.~Turini\inst{7b}
+ \and V.~Vacek\inst{1b}
+ \and M.~Vitek\inst{1b}
+ \and J.~Welti\inst{3a,3b}
+ \and J.~Whitmore\inst{10}
+ }          %ends author list
+\shortauthor{The TOTEM Collaboration (G.~Antchev \etal)}
+%\vspace{0.5cm}
+\institute{
+\inst{1a}{Institute of Physics of the Academy of Sciences of the Czech Republic, Praha, Czech Republic.}\\
+\inst{1b}{Czech Technical University, Praha, Czech Republic.}\\
+\inst{2} {National Institute of Chemical Physics and Biophysics NICPB, Tallinn, Estonia.}\\
+\inst{3a}{Helsinki Institute of Physics, Finland.}\\
+\inst{3b}{Department of Physics, University of Helsinki, Finland.}\\
+\inst{4} {MTA Wigner Research Center, RMKI, Budapest, Hungary.}\\
+\inst{5a}{INFN Sezione di Bari, Italy.}\\
+\inst{5b}{Dipartimento Interateneo di Fisica di Bari, Italy.}\\
+\inst{6a}{Sezione INFN, Genova, Italy.}\\
+\inst{6b}{Universit\`{a} degli Studi di Genova, Italy.}\\
+\inst{7a}{INFN Sezione di Pisa, Italy.}\\
+\inst{7b}{Universit\`{a} degli Studi di Siena and Gruppo Collegato INFN di Siena, Italy.}\\
+\inst{8} {CERN, Geneva, Switzerland.}\\
+\inst{9} {Case Western Reserve University, Dept. of Physics, Cleveland, OH, USA.}\\
+\inst{10}{Penn State University, Dept. of Physics, University Park, PA, USA.}\\
 }
+
+
 \pacs{13.60.Hb}{Total and inclusive cross sections (including deep-inelastic processes)}
 
 
 \abstract{%
-Abstract of the paper.
+!! THIS IS JUST A PLACEHOLDER !!\\
+TOTEM has measured the differential cross-section for elastic proton-proton scattering
+at the LHC energy of √
+s = 7 TeV analysing data from a short run with dedicated large-β∗ optics.
+A single exponential fit with a slope B = (20.1 0.2stat 0.3syst ) GeV−2 describes the range of the
+± ±four-momentum transfer squared from 0.02 to 0.33 GeV2. After the extrapolation to = 0,
+|t| |t|a total elastic scattering cross-section of (24.8 0.2stat 1.2syst) mb was obtained. Applying
+± ±the optical theorem and using the luminosity measurement from CMS, a total proton-proton
+cross-section of (98.3 0.2stat 2.8syst) mb was deduced which is in good agreement with the
+± ±expectation from the overall fit of previously measured data over a large range of center-of-mass
+energies. From the total and elastic pp cross-section measurements, an inelastic pp cross-section
+of (73.5 0.6stat +1.8
+ syst) mb was inferred.
+± −1.3
 }
 
 
@@ -38,17 +152,111 @@ Abstract of the paper.
 %--------------------------------------------------
 \section{Introduction}
 
-TODO: Elastic \& optical point (P1)
+TODO: explain context
 
-TODO: Sum of elastic and inelastic (p2)
+This paper: explanation of how different complementary 
 
-TODO: Lumi independent total, el. And inelast. cross-sections
+\section{Elastic \& optical point}
 
-TODO: Lumi determination (June and Oct.)
+\begin{equation}
+\label{eq:si tot 1}
+\sigma_{\rm tot}^2 = {16\pi\, (\hbar c)^2\over 1 + \rho^2}\, \left. \d\sigma_{\rm el}\over\d t\right|_0
+\end{equation}
 
-TODO: Upper limit on rho
+$\sigma_{\rm tot} = 98.6\un{mb} \pm 2.3\%$, $\sigma_{\rm inel} = 73.2\un{mb} \pm 1.7\%$
 
-TODO: Cosmic ray relevance
+\section{Sum of elastic and inelastic}
+
+\begin{equation}
+\label{eq:si tot 2}
+\sigma_{\rm tot} = \sigma_{\rm el} + \sigma_{\rm inel}
+\end{equation}
+
+$\rho$-independent: $\sigma_{\rm tot} = 99.1\un{mb} \pm 4.4\%$
+
+$\rho$ and $\cal L$-independent: $\sigma_{\rm el} / \sigma_{\rm inel} = 0.345 \pm 2.6\%$, $\sigma_{\rm el} / \sigma_{\rm tot} = 0.257 \pm 2.0\%$
+
+
+
+\section{Lumi independent total, el. and inelast. cross-sections}
+
+\begin{equation}
+\label{eq:si tot 3}
+\sigma_{\rm tot} = {16\pi\, (\hbar c)^2\over 1 + \rho^2}\, {\d N_{\rm el}/\d t|_0 \over N_{\rm el} + N_{\rm inel} }
+\end{equation}
+
+$\sigma_{\rm tot} = 98.0\un{mb} \pm 2.5\%$
+
+Using the $\sigma_{\rm el} / \sigma_{\rm tot}$ ratio from preceding paragraph:
+$\sigma_{\rm el} = 25.1\un{mb} \pm 4.3\%$ and
+$\sigma_{\rm inel} = 72.9\un{mb} \pm 2.0\%$
+
+
+
+%\section{Total cross section combined}
+%
+%Arithmetic average of $\sigma_{\rm tot}$ from Eqs.~\ref{eq:si tot 1}, \ref{eq:si tot 2} and \ref{eq:si tot 3}:
+%$\sigma_{\rm tot} = 98.6\un{mb} \pm 2.3\%$
+
+
+
+
+\section{Luminosity determination}
+
+\subsection{October}
+
+\begin{equation}
+\label{eq:lumi oct}
+{\cal L} = {1 + \rho^2 \over 16\pi\, (\hbar c)^2}\, { (N_{\rm el} + N_{\rm inel})^2 \over \d N_{\rm el}/\d t|_0 }
+\end{equation}
+
+
+${\cal L} = 83.7 \un{\mu b^{-1}} \pm 3.8\%$
+
+\subsection{June}
+Using intercept:
+\begin{equation}
+\label{eq:lumi jun 1}
+{\cal L} =  {16\pi\, (\hbar c)^2\over 1 + \rho^2}\, \left. \d N_{\rm el}\over\d t\right|_0\, {1\over \sigma_{\rm tot}^2}
+\end{equation}
+taking $\sigma_{\rm tot}$ from Eq.~\ref{eq:si tot 3} yields ${\cal L} = 1.66 \un{\mu b^{-1}} \pm 5.2\%$.
+
+Using elastic cross section:
+\begin{equation}
+\label{eq:lumi jun 1}
+{\cal L} = {N_{\rm el}\over \sigma_{\rm el}}
+\end{equation}
+taking $\sigma_{\rm tot}$ from below Eq.~\ref{eq:si tot 3} yields ${\cal L} = 1.65 \un{\mu b^{-1}} \pm 4.5\%$.
+
+
+
+\section{Rho determination}
+
+From
+\begin{equation}
+\label{eq:rho}
+\rho^2 = 16\pi\ (\hbar c)^2\ {\cal L}\ {\d N_{\rm el}/\d t|_0\over (N_{\rm el} + N_{\rm inel})^2} - 1
+\end{equation}
+we obtained $\rho^2 = 0.0092 \pm 0.0558$ (mean and standard deviation). This estimate can not be translated into terms of $\rho$ in a straight-forward manner -- an important part of the $\rho^2$ distribution extends to negative values, where square root is not defined. Instead, we calculated that at $95\%$ confidence level $\rho^2 < 0.10$. This upper bound can be expressed as $\rho < 0.32$. Alternatively, one can pursue the Bayes' approach to estimate $|\rho|$. Taking a uniform prior $|\rho|$ distribution yields a posterior distribution with mean $0.145$ and standard deviation $0.091$.
+
+
+
+\section{Cosmic ray relevance}
+
+
+
+	
+\section{Conclusions}
+
+\begin{figure}
+\onefigure{fig_el/sigma_el_to_sigma_tot.pdf}
+\vskip-5mm
+\caption{(Color online) The ratio of the elastic to total cross-section as a function of the scattering energy $\sqrt s$. TODO: fit ??}
+\label{fig:sigma rat}
+\end{figure}
+
+TODO: $\sigma_{\rm el} / \sigma_{\rm inel}$ -- indicates the ``shape'' of the proton; need interpretation for the ratio growing with $\sqrt s$
+
 
 
 
@@ -85,6 +293,14 @@ Acknowledgements -- Insert here the text.
 \bibitem{compete} 
 	\Name{J.~R.~Cudell {\it et al.} (COMPETE Collaboration)}
 	\REVIEW{Phys.\ Rev.\ Lett.}{89}{2002}{201801}
+
+\bibitem{P1} 
+	\Name{Antchev G.~{\it et al.}~(TOTEM Collaboration)}
+	\REVIEW{Europhys.~Lett.}{TODO}{2012}{TODO}
+
+\bibitem{P2} 
+	\Name{Antchev G.~{\it et al.}~(TOTEM Collaboration)}
+	\REVIEW{Europhys.~Lett.}{TODO}{2012}{TODO}
 
 \end{thebibliography}
 
