--- a/2012/3papers/elastic/elastic.tex
+++ b/2012/3papers/elastic/elastic.tex
@@ -491,20 +491,19 @@ $0.6434$ & $0.0041$ & $\S24.65$ & $0.99$ & $^{\s6.87}_{\s9.30}$ && $1.0647$ & $0
 \caption{Elastic slopes $B$ in $\rm GeV^{-2}$ obtained from parameterization Eq.~\ref{eq:extrapolation} fitted through intervals $|t|_{\rm low}$ to $|t|_{\rm high}$. The first error is statistical, the second systematic.}
 \label{tab:B}
 \begin{center}
-\begin{tabular}{c|cc}
-$|t|_{\rm low} \backslash |t|_{\rm high}$ & $0.1\un{GeV^2}$ & $0.2\un{GeV^2}$\cr\hline
+\begin{tabular}{l|cc}
+$|t|_{\rm low}\ \backslash\ \ |t|_{\rm high}$ & $0.1\un{GeV^2}$ & $0.2\un{GeV^2}$\cr\hline
 $0.005\un{GeV^2}$ & $19.96 \pm 0.04 \pm 0.22$ & $19.89 \pm 0.02 \pm 0.27$ \cr
 $0.020\un{GeV^2}$ & $19.93 \pm 0.05 \pm 0.21$ & $19.87 \pm 0.03 \pm 0.33$\cr
 \end{tabular}
 \end{center}
 \end{table}
 
-
+The measured differential cross-section exhibits purely-exponential decay for $|t| < 0.2\un{GeV^2}$. Tab.~\ref{tab:B} gives elastic slopes $B$ extracted from several $|t|$ regions. All the results are compatible mutually and with the value $B = (20.1 \pm 0.2^{\rm stat} \pm 0.3^{\rm syst})$ determined in our previous publication \cite{epl96} (where the $\d\sigma_{\rm el}/\d t$ data were available only down to $|t| = 0.02\un{GeV^2}$).
 
 By extrapolating the differential cross-section to $t=0$ (see Eq.~\ref{eq:extrapolation}), we determined the intercept
-$\d\sigma_{\rm el}/\d t|_0 = 506\un{mb} \pm 1.7\%^{\rm stat} \pm 4.5\%^{\rm syst}$ and elastic slope
-$B = 19.9\un{GeV^{-2}} \pm 0.2\%^{\rm stat} \pm 1.3\%^{\rm syst}$ -- details on the uncertainty composition can be found in Tab.~\ref{tab:results}. Let us remark that we observe no indication of $B$ changing for $|t| < 0.2\un{GeV^2}$. We used the extrapolation to calculate the integrated elastic cross-section
-$\sigma_{\rm el} = 25.4\un{mb} \pm 0.1\%^{\rm stat} \pm 4.2\%^{\rm syst}$. Compared to our previous publication \cite{epl96}, the ratio of extrapolated to observed elastic cross-section was reduced from $50$ to $10\%$ (due to a very close RP approach to the beam).
+$\d\sigma_{\rm el}/\d t|_0 = (506.4 \pm 0.9^{\rm stat} \pm 23.0^{\rm syst})\un{mb}$
+-- details on the uncertainty composition can be found in Tab.~\ref{tab:results}. In order to calculate the integrated elastic cross-section, the $\d\sigma_{\rm el}/\d t$ data were summed up to $|t| = 0.415\un{GeV^2}$ and the extrapolation was used to determine the low-$|t|$ contribution, where no measurements are available. Due to the very close RP approach to the beam, the ratio of extrapolated to observed elastic cross-section was less than $10\%$. The effect of the neglected higher-$t$ contributions is small compared to the other uncertainties. The calculation yielded $\sigma_{\rm el} = (25.43 \pm 0.03^{\rm stat} \pm 1.07^{\rm syst})\un{mb}$.
 
 The optical theorem permits to calculate the total and inelastic cross-sections:
 \begin{equation}
@@ -514,26 +513,25 @@ The optical theorem permits to calculate the total and inelastic cross-sections:
 \end{equation}
 Taking the COMPETE \cite{compete} preferred-model extrapolation of $0.141\pm 0.007$ for the $\rho$ parameter yields
 $\sigma_{\rm tot} = 98.6\un{mb}  \pm 2.3\%^{\rm syst}$ and
-$\sigma_{\rm inel} = 73.2\un{mb} \pm 1.7\%^{\rm syst}$ (details on the uncertainty composition are given in Tab.~\ref{tab:results}). Taking the full COMPETE error band (from considering a handful of fit models) for the $\rho$ parameter $^{+0.01}_{-0.08}$, would result in $\sigma_{\rm tot}$ variation of $^{+0.8}_{-0.1}\%$. Even that error would be small compared to the other uncertainty contributions.
+$\sigma_{\rm inel} = 73.2\un{mb} \pm 1.7\%^{\rm syst}$ (details on the uncertainty composition are given in Tab.~\ref{tab:results}). Taking the full COMPETE error band (from considering a handful of fit models) for the $\rho$ parameter $^{+0.01}_{-0.08}$, would result in $\sigma_{\rm tot}$ variation of $^{+0.8}_{-0.1}$. Even that error would be small compared to the other uncertainty contributions.
 
  
 
 \begin{largetable}
-\caption{Result summary. The right-most column gives the total systematic uncertainty, combined in quadrature and taking into account the correlations between the contributions.}
-%\vskip-0mm
+\caption{Result summary. The $\rho$-uncertainties follow from the COMPETE preferred-model extrapolation $\rho = 0.141\pm 0.007$. The right-most column gives the total systematic uncertainty, combined in quadrature and taking into account the correlations between the contributions.}
 \label{tab:results}
 \begin{tabular}{clcccccl}\hline
-quantity & value & statistical u. &\multispan5\hss systematic uncertainty\hss\cr\hline
+quantity & value & statistical unc. &\multispan5\hss systematic uncertainty\hss\cr\hline
 %
-$\d\sigma_{\rm el}/\d t|_0$ & $506\un{mb/GeV^2}$ & $\pm 0.2\%^{\rm stat}$ & $\pm 1.7\%^{t-\rm dep}$ & $\pm 1.2\%^{\rm norm}$ & $\pm 4.0\%^{\rm lumi}$ &  & $\Rightarrow \pm 4.5\%^{\rm syst}$\cr
+$\d\sigma_{\rm el}/\d t|_0\ung{mb/GeV^2}$ & $506.4$ & $\pm 0.9^{\rm stat}$ & $\pm 8.6^{t-\rm dep}$ & $\pm 6.1^{\rm norm}$ & $\pm 20.4^{\rm lumi}$ &  & $\Rightarrow \pm 23.0^{\rm syst}$\cr
 %
-$B$ & $\S19.9\un{GeV^{-2}}$ & $\pm 0.2\%^{\rm stat}$  & $\pm 1.3\%^{\rm t-dep}$ & & & & $ \Rightarrow \pm 1.3\%^{\rm syst}$\cr
+$B\ung{GeV^{-2}}$ & $19.89$ & $\pm 0.03^{\rm stat}$  & $\pm 0.27^{\rm t-dep}$ & & & & $ \Rightarrow \pm 0.27^{\rm syst}$\cr
 %
-$\sigma_{\rm el}$ & $\S25.4\un{mb}$ & $\pm 0.1\%^{\rm stat}$ & $\pm 0.4\%^{t-\rm dep}$ & $\pm 1.2\%^{\rm norm}$ & $\pm 4.0\%^{\rm lumi}$ &  & $\Rightarrow \pm 4.2\%^{\rm syst}$\cr\hline
+$\sigma_{\rm el}\ung{mb}$ & $25.43$ & $\pm 0.03^{\rm stat}$ & $\pm 0.10^{t-\rm dep}$ & $\pm 0.31^{\rm norm}$ & $\pm 1.02^{\rm lumi}$ &  & $\Rightarrow \pm 1.07^{\rm syst}$\cr\hline
 %
-$\sigma_{\rm tot}$ & $\S98.6\un{mb}$ & & $\pm 0.9\%^{\rm t-dep}$ & $\pm 0.6\%^{\rm norm}$ & $\pm 2.0\%^{\rm lumi}$ & $\pm 0.1 \%^{\rm rho}$ & $ \Rightarrow \pm 2.3 \%^{\rm syst}$\cr
+$\sigma_{\rm tot}\ung{mb}$ & $98.58$ & & $\pm 0.84^{\rm t-dep}$ & $\pm 0.59^{\rm norm}$ & $\pm 1.98^{\rm lumi}$ & $\pm 0.10^{\rm rho}$ & $ \Rightarrow \pm 2.23^{\rm syst}$\cr
 %
-$\sigma_{\rm inel}$ & $\S73.2\un{mb}$ & & $\pm 1.1\%^{\rm t-dep}$ & $\pm 0.4\%^{\rm norm}$ & $\pm 1.3\%^{\rm lumi}$ & $\pm 0.1 \%^{\rm rho}$ & $ \Rightarrow \pm 1.7 \%^{\rm syst}$\cr\hline
+$\sigma_{\rm inel}\ung{mb}$ & $73.15$ & & $\pm 0.77^{\rm t-dep}$ & $\pm 0.29^{\rm norm}$ & $\pm 0.96^{\rm lumi}$ & $\pm 0.10^{\rm rho}$ & $ \Rightarrow \pm 1.26^{\rm syst}$\cr\hline
 \end{tabular}
 \end{largetable}
 
